textfield: fix select alignment and padding

--- a/components/core/textfield/style.scss
+++ b/components/core/textfield/style.scss
@@ -61,6 +61,7 @@ $icon-signifier__padding-end: dp(16);
   &[mdw-box] {
     z-index: 0;
   }
+  margin-top: auto; // Fixes flex baseline alignment
   margin-bottom: 8px;
 }
 
@@ -299,6 +300,13 @@ select.mdw-textfield__input {
     display: none;
   }
   grid-column-end: 6;
+  
+  [dir=rtl] & {
+    padding-left: 24px;
+    padding-right: 0;
+  }
+  padding-right: 24px;
+
   -ms-grid-column-span: 2;
   &:-moz-focusring {
     color: black;
